2006-03-28  Lars Hecking  <lhecking@users.sourceforge.net>

	* docs/gnuplot.texi: Regenerated after recent documentation updates.

	* term/Makefile.am.in: Add PostScript directory to EXTRA_DIST. Add
	uninstall support. Rename install target to install-data-local (don't
	use automake-generated targets in Makefile.am) and add $(DESTDIR)
	support.

2006-03-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.oww (CPPFLAGS): Added -DEAM_OBJECTS.

	* src/plot2d.c (get_data): Avoid small size increments on
	reallocation --- at least double, and add another 1000 entries for
	good measure.

	* src/win/winmain.c: WANT_GET_DLLVERSION hardcoded active.
	(CSIDL_APPDATA): Provide fallback definition.
	(ShutDown): Removed ancient cruft.
	(appdata_directory): New function.  Dynamically attach to
	shell32.dll and ask it for the "application data" directory.
	(WinMain): Have get_user_env() take care of finding $HOME.
	INIFILE_IN_APPDATA hardcoded.

	* src/win/wcommon.h (INIFILE_IN_APPDATA, WANT_GETDLLVERSION):
	Definitions removed, hardcoded active now.
	(appdata_directory): Added prototype.

	* src/plot.c: Added #includes of win/wgnuplib.h, win/wcommon.h.
	(get_user_env) [WIN32]: Call helper routine to find Windows'
	"application data" directory.

2006-03-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (cp_alloc) src/plot3d.c (sp_alloc): Initialize the
	line style, arrow style, and fill style fields of each new plot to
	something reasonable.

2006-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	* NEWS: List various new features added since last October.

	* src/gplt_x11.c: Store text rotation angle internally as a double.

2006-03-26  Ethan A Merritt  <merritt@u.washington.edu>

	SourceForge patchset #1143563  "Place arbitrary objects in plots".
	This patchset introduces a general infrastructure for placing
	individual geometric objects, similar to "set label" and "set arrow".